[gd_scene load_steps=2 format=3 uid="uid://dda44yj83pg1p"]

[ext_resource type="Script" uid="uid://dhgknti5ov43o" path="res://scenes/main_menu/save_slot.gd" id="1_o2kxc"]

[node name="SaveSlot" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o2kxc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChapterLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Cap√≠tulo:"

[node name="TimestampLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Salvo em:"

[node name="LoadButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Carregar"
